--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,1 +1,12 @@
+spring:
+  datasource:
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/${DB_NAME:ticketflow}
+    username: ${DB_USER:postgres}
+    password: ${DB_PASSWORD:postgres}
 
+  jpa:
+    hibernate:
+      ddl-auto: validate
+
+  liquibase:
+    enabled: true
