--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,10 +6,10 @@ spring:
     driver-class-name: org.postgresql.Driver
 
   jpa:
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+        highlight_sql: true
     hibernate:
       ddl-auto: validate
-
-
-
-
-
