--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -7,3 +7,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+
+logging:
+  level:
+    org.springframework.test.context.jdbc: debug
+#    org.springframework.jdbc.datasource.init: debug
